Add all my open sources to the bank

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 9766d620afd3a4a5a628a687329e29ef6fc13e90
+% Commit: 79433677546b4558e74bca443f53e3bdd188498e
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2023-11-25
@@ -4321,10 +4321,9 @@
   year          = {2021},
   number        = {2},
   pages         = {209--218},
-  issn          = {1526-7555,2163-4548},
+  issn          = {1526-7555},
   mrclass       = {60H10 (60G51 91G30)},
   mrnumber      = {4273497},
-  mrreviewer    = {Christel\ Geiss},
   doi           = {10.4310/CIS.2021.v21.n2.a2},
   url           = {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
 }
@@ -4337,9 +4336,10 @@
   year          = {2021},
   number        = {2},
   pages         = {209--218},
-  issn          = {1526-7555},
+  issn          = {1526-7555,2163-4548},
   mrclass       = {60H10 (60G51 91G30)},
   mrnumber      = {4273497},
+  mrreviewer    = {Christel\ Geiss},
   doi           = {10.4310/CIS.2021.v21.n2.a2},
   url           = {https://doi.org/10.4310/CIS.2021.v21.n2.a2}
 }
@@ -11580,18 +11580,6 @@
 }
 @incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
-}
-@incollection{bourgain:02:on*2,
-  author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
   journal       = {J. Anal. Math.},
@@ -11605,6 +11593,18 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
+}
+@incollection{bourgain:02:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
@@ -12537,21 +12537,21 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@incollection{bourgain:13:on*1,
+@article{bourgain:13:on*1,
   author        = {Bourgain, J.},
-  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
-  booktitle     = {Asymptotic geometric analysis},
-  series        = {Fields Inst. Commun.},
-  volume        = {68},
-  pages         = {39--44},
-  publisher     = {Springer, New York},
+  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {197},
   year          = {2013},
-  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
-  mrclass       = {37D50 (37D25)},
-  mrnumber      = {3076146},
-  mrreviewer    = {Boris\ Hasselblatt},
-  doi           = {10.1007/978-1-4614-6406-8\_3},
-  url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
+  number        = {1},
+  pages         = {215--235},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {11F30},
+  mrnumber      = {3096614},
+  mrreviewer    = {Gergely\ Harcos},
+  doi           = {10.1007/s11856-013-0002-2},
+  url           = {https://doi.org/10.1007/s11856-013-0002-2}
 }
 @article{bourgain:13:on*2,
   author        = {Bourgain, J.},
@@ -12568,21 +12568,21 @@
   doi           = {10.1007/s11854-013-0016-z},
   url           = {https://doi.org/10.1007/s11854-013-0016-z}
 }
-@article{bourgain:13:on*3,
+@incollection{bourgain:13:on*3,
   author        = {Bourgain, J.},
-  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {197},
+  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
+  booktitle     = {Asymptotic geometric analysis},
+  series        = {Fields Inst. Commun.},
+  volume        = {68},
+  pages         = {39--44},
+  publisher     = {Springer, New York},
   year          = {2013},
-  number        = {1},
-  pages         = {215--235},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {11F30},
-  mrnumber      = {3096614},
-  mrreviewer    = {Gergely\ Harcos},
-  doi           = {10.1007/s11856-013-0002-2},
-  url           = {https://doi.org/10.1007/s11856-013-0002-2}
+  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
+  mrclass       = {37D50 (37D25)},
+  mrnumber      = {3076146},
+  mrreviewer    = {Boris\ Hasselblatt},
+  doi           = {10.1007/978-1-4614-6406-8\_3},
+  url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -13490,7 +13490,20 @@
   mrreviewer    = {James\ Hagler},
   url           = {http://www.numdam.org/item?id=CM_1981__43_1_133_0}
 }
-@article{bourgain:81:new,
+@book{bourgain:81:new,
+  author        = {Bourgain, Jean},
+  title         = {New classes of {${\cal L}\sp{p}$}-spaces},
+  series        = {Lecture Notes in Mathematics},
+  volume        = {889},
+  publisher     = {Springer-Verlag, Berlin-New York},
+  year          = {1981},
+  pages         = {v+143},
+  isbn          = {3-540-11156-5},
+  mrclass       = {46B20},
+  mrnumber      = {639014},
+  mrreviewer    = {Hermann\ K\"{o}nig}
+}
+@article{bourgain:81:new*1,
   author        = {Bourgain, J.},
   title         = {A new class of {${\cal L}\sp{1}$}-spaces},
   journal       = {Israel J. Math.},
@@ -13505,19 +13518,6 @@
   mrreviewer    = {G.\ Schechtman},
   doi           = {10.1007/BF02762857},
   url           = {https://doi.org/10.1007/BF02762857}
-}
-@book{bourgain:81:new*1,
-  author        = {Bourgain, Jean},
-  title         = {New classes of {${\cal L}\sp{p}$}-spaces},
-  series        = {Lecture Notes in Mathematics},
-  volume        = {889},
-  publisher     = {Springer-Verlag, Berlin-New York},
-  year          = {1981},
-  pages         = {v+143},
-  isbn          = {3-540-11156-5},
-  mrclass       = {46B20},
-  mrnumber      = {639014},
-  mrreviewer    = {Hermann\ K\"{o}nig}
 }
 @article{bourgain:81:noncompleteness,
   author        = {Bourgain, Jean},
@@ -14074,7 +14074,19 @@
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
 }
-@article{bourgain:84:on*1,
+@inproceedings{bourgain:84:on*1,
+  author        = {Bourgain, J.},
+  title         = {On nonisomorphisms of algebras of analytic functions},
+  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
+  series        = {Teubner-Texte Math.},
+  volume        = {67},
+  pages         = {145--154},
+  publisher     = {Teubner, Leipzig},
+  year          = {1984},
+  mrclass       = {46J15 (32E25)},
+  mrnumber      = {763536}
+}
+@article{bourgain:84:on*2,
   author        = {Bourgain, J.},
   title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
   journal       = {Math. Nachr.},
@@ -14088,18 +14100,6 @@
   mrreviewer    = {D.\ L.\ Burkholder},
   doi           = {10.1002/mana.19841190104},
   url           = {https://doi.org/10.1002/mana.19841190104}
-}
-@inproceedings{bourgain:84:on*2,
-  author        = {Bourgain, J.},
-  title         = {On nonisomorphisms of algebras of analytic functions},
-  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
-  series        = {Teubner-Texte Math.},
-  volume        = {67},
-  pages         = {145--154},
-  publisher     = {Teubner, Leipzig},
-  year          = {1984},
-  mrclass       = {46J15 (32E25)},
-  mrnumber      = {763536}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14708,22 +14708,6 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {73--84},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937582},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
-}
-@article{bourgain:88:on*1,
-  author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14738,7 +14722,7 @@
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
 }
-@incollection{bourgain:88:on*2,
+@incollection{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14753,6 +14737,22 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
+}
+@article{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {73--84},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937582},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15020,22 +15020,6 @@
   url           = {https://doi.org/10.1007/BF01895639}
 }
 @incollection{bourgain:91:on,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of polynomials on high-dimensional convex sets},
-  booktitle     = {Geometric aspects of functional analysis (1989--90)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1469},
-  pages         = {127--137},
-  publisher     = {Springer, Berlin},
-  year          = {1991},
-  isbn          = {3-540-54024-5},
-  mrclass       = {52A21 (46B07 46E30 52A20)},
-  mrnumber      = {1122617},
-  mrreviewer    = {Wolfgang\ Lusky},
-  doi           = {10.1007/BFb0089219},
-  url           = {https://doi.org/10.1007/BFb0089219}
-}
-@incollection{bourgain:91:on*1,
   author        = {Bourgain, Jean},
   title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
   booktitle     = {Geometric aspects of functional analysis (1989--90)},
@@ -15050,6 +15034,22 @@
   mrreviewer    = {Peter\ I.\ Lizorkin},
   doi           = {10.1007/BFb0089225},
   url           = {https://doi.org/10.1007/BFb0089225}
+}
+@incollection{bourgain:91:on*1,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of polynomials on high-dimensional convex sets},
+  booktitle     = {Geometric aspects of functional analysis (1989--90)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1469},
+  pages         = {127--137},
+  publisher     = {Springer, Berlin},
+  year          = {1991},
+  isbn          = {3-540-54024-5},
+  mrclass       = {52A21 (46B07 46E30 52A20)},
+  mrnumber      = {1122617},
+  mrreviewer    = {Wolfgang\ Lusky},
+  doi           = {10.1007/BFb0089219},
+  url           = {https://doi.org/10.1007/BFb0089219}
 }
 @article{bourgain:91:on*2,
   author        = {Bourgain, J.},
@@ -15820,21 +15820,6 @@
 }
 @article{bourgain:99:on,
   author        = {Bourgain, J.},
-  title         = {On growth of {S}obolev norms in linear {S}chr\"{o}dinger equations with smooth time dependent potential},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {77},
-  year          = {1999},
-  pages         = {315--348},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {35J10 (35B10 35K40 47N20)},
-  mrnumber      = {1753490},
-  mrreviewer    = {C.\ Eugene\ Wayne},
-  doi           = {10.1007/BF02791265},
-  url           = {https://doi.org/10.1007/BF02791265}
-}
-@article{bourgain:99:on*1,
-  author        = {Bourgain, J.},
   title         = {On the dimension of {K}akeya sets and related maximal inequalities},
   journal       = {Geom. Funct. Anal.},
   fjournal      = {Geometric and Functional Analysis},
@@ -15848,6 +15833,21 @@
   mrreviewer    = {Andreas\ Seeger},
   doi           = {10.1007/s000390050087},
   url           = {https://doi.org/10.1007/s000390050087}
+}
+@article{bourgain:99:on*1,
+  author        = {Bourgain, J.},
+  title         = {On growth of {S}obolev norms in linear {S}chr\"{o}dinger equations with smooth time dependent potential},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {77},
+  year          = {1999},
+  pages         = {315--348},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {35J10 (35B10 35K40 47N20)},
+  mrnumber      = {1753490},
+  mrreviewer    = {C.\ Eugene\ Wayne},
+  doi           = {10.1007/BF02791265},
+  url           = {https://doi.org/10.1007/BF02791265}
 }
 @article{bourgain:99:on*2,
   author        = {Bourgain, J.},
@@ -21553,6 +21553,26 @@
   doi           = {10.1214/19-AIHP983},
   url           = {https://doi.org/10.1214/19-AIHP983}
 }
+@misc{chen:23:awards,
+  author        = {Le Chen},
+  title         = {Awards from {National Science Foundation (NSF)} with a Focus on Division of Mathematical Sciences {(DMS)}},
+  month         = {nov},
+  year          = {2023},
+  publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
+  doi           = {10.5281/zenodo.10206801},
+  url           = {https://doi.org/10.5281/zenodo.10206801}
+}
+@misc{chen:23:graduate,
+  author        = {Le Chen},
+  title         = {Graduate Student Seminars by Le Chen},
+  month         = {nov},
+  year          = {2023},
+  publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
+  doi           = {10.5281/zenodo.10206966},
+  url           = {https://doi.org/10.5281/zenodo.10206966}
+}
 @misc{chen:23:open,
   author        = {Le Chen},
   title         = {Open slides for linear algebra},
@@ -21562,6 +21582,16 @@
   journal       = {GitHub repository},
   doi           = {10.5281/zenodo.10206020},
   url           = {https://doi.org/10.5281/zenodo.10206020}
+}
+@misc{chen:23:probability,
+  author        = {Le Chen},
+  title         = {Probability: Summer Science Institute at Auburn},
+  month         = {nov},
+  year          = {2023},
+  publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
+  doi           = {10.5281/zenodo.10206799},
+  url           = {https://doi.org/10.5281/zenodo.10206799}
 }
 @misc{chen:23:some,
   author        = {Le Chen},
@@ -25694,6 +25724,21 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25707,21 +25752,6 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -28456,18 +28486,6 @@
 }
 @book{dunford.schwartz:88:linear,
   author        = {Dunford, Nelson and Schwartz, Jacob T.},
-  title         = {Linear operators. {P}art {II}},
-  series        = {Wiley Classics Library},
-  note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
-  publisher     = {John Wiley \& Sons, Inc., New York},
-  year          = {1988},
-  pages         = {i--x, 859--1923 and 1--7},
-  isbn          = {0-471-60847-5},
-  mrclass       = {47-01 (46-01)},
-  mrnumber      = {1009163}
-}
-@book{dunford.schwartz:88:linear*1,
-  author        = {Dunford, Nelson and Schwartz, Jacob T.},
   title         = {Linear operators. {P}art {I}},
   series        = {Wiley Classics Library},
   note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
@@ -28477,6 +28495,18 @@
   isbn          = {0-471-60848-3},
   mrclass       = {47-01 (46-01)},
   mrnumber      = {1009162}
+}
+@book{dunford.schwartz:88:linear*1,
+  author        = {Dunford, Nelson and Schwartz, Jacob T.},
+  title         = {Linear operators. {P}art {II}},
+  series        = {Wiley Classics Library},
+  note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
+  publisher     = {John Wiley \& Sons, Inc., New York},
+  year          = {1988},
+  pages         = {i--x, 859--1923 and 1--7},
+  isbn          = {0-471-60847-5},
+  mrclass       = {47-01 (46-01)},
+  mrnumber      = {1009163}
 }
 @article{dunlap.gu.ea:20:fluctuations,
   author        = {Dunlap, Alexander and Gu, Yu and Ryzhik, Lenya and Zeitouni, Ofer},
@@ -56739,7 +56769,20 @@
   mrnumber      = {1915445},
   mrreviewer    = {Anton Wakolbinger}
 }
-@article{perkins:82:local,
+@incollection{perkins:82:local,
+  author        = {Perkins, Edwin},
+  title         = {Local time and pathwise uniqueness for stochastic differential equations},
+  booktitle     = {Seminar on {P}robability, {XVI}},
+  series        = {Lecture Notes in Math.},
+  volume        = {920},
+  pages         = {201--208},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1982},
+  mrclass       = {60H10},
+  mrnumber      = {658680},
+  mrreviewer    = {Toshio Yamada}
+}
+@article{perkins:82:local*1,
   author        = {Perkins, Edwin},
   title         = {Local time is a semimartingale},
   journal       = {Z. Wahrsch. Verw. Gebiete},
@@ -56754,19 +56797,6 @@
   mrreviewer    = {E. \c{C}inlar},
   doi           = {10.1007/BF01957098},
   url           = {https://doi.org/10.1007/BF01957098}
-}
-@incollection{perkins:82:local*1,
-  author        = {Perkins, Edwin},
-  title         = {Local time and pathwise uniqueness for stochastic differential equations},
-  booktitle     = {Seminar on {P}robability, {XVI}},
-  series        = {Lecture Notes in Math.},
-  volume        = {920},
-  pages         = {201--208},
-  publisher     = {Springer, Berlin-New York},
-  year          = {1982},
-  mrclass       = {60H10},
-  mrnumber      = {658680},
-  mrreviewer    = {Toshio Yamada}
 }
 @article{peszat.tindel:10:stochastic,
   author        = {Peszat, Szymon and Tindel, Samy},
@@ -60975,22 +61005,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {96},
-  year          = {1993},
-  number        = {2},
-  pages         = {241--260},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1227034},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01192135},
-  url           = {https://doi.org/10.1007/BF01192135}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -61004,6 +61018,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01199314},
   url           = {https://doi.org/10.1007/BF01199314}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {96},
+  year          = {1993},
+  number        = {2},
+  pages         = {241--260},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1227034},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01192135},
+  url           = {https://doi.org/10.1007/BF01192135}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -62922,6 +62952,21 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62935,21 +62980,6 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -67010,7 +67040,7 @@
   author        = {Zabczyk, Jerzy},
   title         = {Mathematical control theory---an introduction},
   series        = {Systems \& Control: Foundations \& Applications},
-  edition       = {Second},
+  note          = {Second edition [of 2348543]},
   publisher     = {Birkh\"{a}user/Springer, Cham},
   year          = {[2020] \copyright 2020},
   pages         = {xxvi+336},
@@ -67024,7 +67054,7 @@
   author        = {Zabczyk, Jerzy},
   title         = {Mathematical control theory---an introduction},
   series        = {Systems \& Control: Foundations \& Applications},
-  note          = {Second edition [of 2348543]},
+  edition       = {Second},
   publisher     = {Birkh\"{a}user/Springer, Cham},
   year          = {[2020] \copyright 2020},
   pages         = {xxvi+336},
@@ -68627,21 +68657,6 @@
   url           = {https://doi.org/10.1016/j.jde.2008.02.019}
 }
 @article{zhang:09:variational,
-  author        = {Zhang, Xicheng},
-  title         = {A variational representation for random functionals on abstract {W}iener spaces},
-  journal       = {J. Math. Kyoto Univ.},
-  fjournal      = {Journal of Mathematics of Kyoto University},
-  volume        = {49},
-  year          = {2009},
-  number        = {3},
-  pages         = {475--490},
-  issn          = {0023-608X},
-  mrclass       = {60H07 (60F10)},
-  mrnumber      = {2583599},
-  doi           = {10.1215/kjm/1260975036},
-  url           = {https://doi.org/10.1215/kjm/1260975036}
-}
-@article{zhang:09:variational*1,
   author        = {Zhang, Tusheng},
   title         = {Variational inequalities and optimization for {M}arkov processes associated with semi-{D}irichlet forms},
   journal       = {SIAM J. Control Optim.},
@@ -68656,6 +68671,21 @@
   mrreviewer    = {Arie Leizarowitz},
   doi           = {10.1137/080737630},
   url           = {https://doi.org/10.1137/080737630}
+}
+@article{zhang:09:variational*1,
+  author        = {Zhang, Xicheng},
+  title         = {A variational representation for random functionals on abstract {W}iener spaces},
+  journal       = {J. Math. Kyoto Univ.},
+  fjournal      = {Journal of Mathematics of Kyoto University},
+  volume        = {49},
+  year          = {2009},
+  number        = {3},
+  pages         = {475--490},
+  issn          = {0023-608X},
+  mrclass       = {60H07 (60F10)},
+  mrnumber      = {2583599},
+  doi           = {10.1215/kjm/1260975036},
+  url           = {https://doi.org/10.1215/kjm/1260975036}
 }
 @article{zhang:10:stochastic,
   author        = {Zhang, Xicheng},
