--- a/All.bib
+++ b/All.bib
@@ -6,10 +6,10 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 898c6ac41134ccd651e23abbd7a6dc24f62c3c1c
+% Commit: 7512aae2a08e7515e6d16fd9c0e912c00142f147
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
-% Date:   2023-11-25
+% Date:   2023-11-27
 % ---------------------------
 
 
@@ -11563,7 +11563,19 @@
   doi           = {10.1090/conm/307/05265},
   url           = {https://doi.org/10.1090/conm/307/05265}
 }
-@article{bourgain:02:on,
+@incollection{bourgain:02:on,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@article{bourgain:02:on*1,
   author        = {Bourgain, J.},
   title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
   journal       = {Israel J. Math.},
@@ -11577,18 +11589,6 @@
   mrreviewer    = {Colin\ C.\ Graham},
   doi           = {10.1007/BF02785861},
   url           = {https://doi.org/10.1007/BF02785861}
-}
-@incollection{bourgain:02:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @incollection{bourgain:02:on*2,
   author        = {Bourgain, J.},
@@ -11606,23 +11606,7 @@
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
 }
-@article{bourgain:02:on*3,
-  author        = {Bourgain, Jean},
-  title         = {On the global {C}auchy problem for the nonlinear {S}chr\"{o}dinger equation},
-  journal       = {Proc. Natl. Acad. Sci. USA},
-  fjournal      = {Proceedings of the National Academy of Sciences of the United States of America},
-  volume        = {99},
-  year          = {2002},
-  number        = {24},
-  pages         = {15262--15268},
-  issn          = {0027-8424,1091-6490},
-  mrclass       = {35Q55 (35G25)},
-  mrnumber      = {1946761},
-  mrreviewer    = {Victor\ V.\ Zharinov},
-  doi           = {10.1073/pnas.222494399},
-  url           = {https://doi.org/10.1073/pnas.222494399}
-}
-@incollection{bourgain:02:on*4,
+@incollection{bourgain:02:on*3,
   author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential. {II}},
   note          = {Dedicated to the memory of Tom Wolff},
@@ -11637,6 +11621,22 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02786578},
   url           = {https://doi.org/10.1007/BF02786578}
+}
+@article{bourgain:02:on*4,
+  author        = {Bourgain, Jean},
+  title         = {On the global {C}auchy problem for the nonlinear {S}chr\"{o}dinger equation},
+  journal       = {Proc. Natl. Acad. Sci. USA},
+  fjournal      = {Proceedings of the National Academy of Sciences of the United States of America},
+  volume        = {99},
+  year          = {2002},
+  number        = {24},
+  pages         = {15262--15268},
+  issn          = {0027-8424,1091-6490},
+  mrclass       = {35Q55 (35G25)},
+  mrnumber      = {1946761},
+  mrreviewer    = {Victor\ V.\ Zharinov},
+  doi           = {10.1073/pnas.222494399},
+  url           = {https://doi.org/10.1073/pnas.222494399}
 }
 @article{bourgain:02:on*5,
   author        = {Bourgain, Jean},
@@ -11670,23 +11670,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_8}
 }
-@article{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
-  journal       = {Geom. Funct. Anal.},
-  fjournal      = {Geometric and Functional Analysis},
-  volume        = {13},
-  year          = {2003},
-  number        = {2},
-  pages         = {334--365},
-  issn          = {1016-443X,1420-8970},
-  mrclass       = {11K55 (28A80)},
-  mrnumber      = {1982147},
-  mrreviewer    = {Ben\ Joseph\ Green},
-  doi           = {10.1007/s000390300008},
-  url           = {https://doi.org/10.1007/s000390300008}
-}
-@incollection{bourgain:03:on*2,
+@incollection{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11701,6 +11685,22 @@
   mrreviewer    = {Apostolos\ A.\ Giannopoulos},
   doi           = {10.1007/978-3-540-36428-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
+}
+@article{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
+  journal       = {Geom. Funct. Anal.},
+  fjournal      = {Geometric and Functional Analysis},
+  volume        = {13},
+  year          = {2003},
+  number        = {2},
+  pages         = {334--365},
+  issn          = {1016-443X,1420-8970},
+  mrclass       = {11K55 (28A80)},
+  mrnumber      = {1982147},
+  mrreviewer    = {Ben\ Joseph\ Green},
+  doi           = {10.1007/s000390300008},
+  url           = {https://doi.org/10.1007/s000390300008}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -11751,22 +11751,6 @@
   url           = {https://doi.org/10.1016/j.crma.2004.03.027}
 }
 @incollection{bourgain:04:on,
-  author        = {Bourgain, Jean},
-  title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
-  note          = {Partial differential equations and applications},
-  journal       = {Discrete Contin. Dyn. Syst.},
-  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
-  volume        = {10},
-  year          = {2004},
-  number        = {1-2},
-  pages         = {75--88},
-  issn          = {1078-0947,1553-5231},
-  mrclass       = {47B80 (35P20 35Q40 37J40 37K55 81Q10)},
-  mrnumber      = {2026184},
-  doi           = {10.3934/dcds.2004.10.75},
-  url           = {https://doi.org/10.3934/dcds.2004.10.75}
-}
-@incollection{bourgain:04:on*1,
   author        = {Bourgain, J.},
   title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11781,6 +11765,22 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/978-3-540-44489-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-44489-3_9}
+}
+@incollection{bourgain:04:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
+  note          = {Partial differential equations and applications},
+  journal       = {Discrete Contin. Dyn. Syst.},
+  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
+  volume        = {10},
+  year          = {2004},
+  number        = {1-2},
+  pages         = {75--88},
+  issn          = {1078-0947,1553-5231},
+  mrclass       = {47B80 (35P20 35Q40 37J40 37K55 81Q10)},
+  mrnumber      = {2026184},
+  doi           = {10.3934/dcds.2004.10.75},
+  url           = {https://doi.org/10.3934/dcds.2004.10.75}
 }
 @article{bourgain:04:remark,
   author        = {Bourgain, Jean},
@@ -12555,6 +12555,21 @@
 }
 @article{bourgain:13:on*2,
   author        = {Bourgain, J.},
+  title         = {On the correlation of the {M}oebius function with rank-one systems},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {120},
+  year          = {2013},
+  pages         = {105--130},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {37A30 (11L20 11N37)},
+  mrnumber      = {3095150},
+  mrreviewer    = {Giulio\ Tiozzo},
+  doi           = {10.1007/s11854-013-0016-z},
+  url           = {https://doi.org/10.1007/s11854-013-0016-z}
+}
+@article{bourgain:13:on*3,
+  author        = {Bourgain, J.},
   title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -12568,21 +12583,6 @@
   mrreviewer    = {Gergely\ Harcos},
   doi           = {10.1007/s11856-013-0002-2},
   url           = {https://doi.org/10.1007/s11856-013-0002-2}
-}
-@article{bourgain:13:on*3,
-  author        = {Bourgain, J.},
-  title         = {On the correlation of the {M}oebius function with rank-one systems},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {120},
-  year          = {2013},
-  pages         = {105--130},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {37A30 (11L20 11N37)},
-  mrnumber      = {3095150},
-  mrreviewer    = {Giulio\ Tiozzo},
-  doi           = {10.1007/s11854-013-0016-z},
-  url           = {https://doi.org/10.1007/s11854-013-0016-z}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -12708,23 +12708,7 @@
   doi           = {10.1007/978-3-319-09477-9\_7},
   url           = {https://doi.org/10.1007/978-3-319-09477-9_7}
 }
-@article{bourgain:14:on*4,
-  author        = {Bourgain, Jean},
-  title         = {On toral eigenfunctions and the random wave model},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {201},
-  year          = {2014},
-  number        = {2},
-  pages         = {611--630},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {60G15 (35J05 35P20)},
-  mrnumber      = {3265298},
-  mrreviewer    = {Isamu\ D\^{o}ku},
-  doi           = {10.1007/s11856-014-1037-z},
-  url           = {https://doi.org/10.1007/s11856-014-1037-z}
-}
-@incollection{bourgain:14:on*5,
+@incollection{bourgain:14:on*4,
   author        = {Bourgain, Jean},
   title         = {On the control problem for {S}chr\"{o}dinger operators on tori},
   booktitle     = {Geometric aspects of functional analysis},
@@ -12739,6 +12723,22 @@
   mrreviewer    = {G.\ V.\ Rozenblum},
   doi           = {10.1007/978-3-319-09477-9\_8},
   url           = {https://doi.org/10.1007/978-3-319-09477-9_8}
+}
+@article{bourgain:14:on*5,
+  author        = {Bourgain, Jean},
+  title         = {On toral eigenfunctions and the random wave model},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {201},
+  year          = {2014},
+  number        = {2},
+  pages         = {611--630},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {60G15 (35J05 35P20)},
+  mrnumber      = {3265298},
+  mrreviewer    = {Isamu\ D\^{o}ku},
+  doi           = {10.1007/s11856-014-1037-z},
+  url           = {https://doi.org/10.1007/s11856-014-1037-z}
 }
 @incollection{bourgain:14:some,
   author        = {Bourgain, Jean},
@@ -13354,6 +13354,20 @@
 }
 @article{bourgain:80:on,
   author        = {Bourgain, J.},
+  title         = {On lacunary sets},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {32},
+  year          = {1980},
+  number        = {1},
+  pages         = {29--32},
+  issn          = {0037-9476},
+  mrclass       = {05A99},
+  mrnumber      = {682989},
+  mrreviewer    = {J.\ Spencer}
+}
+@article{bourgain:80:on*1,
+  author        = {Bourgain, J.},
   title         = {On separable {B}anach spaces, universal for all separable reflexive spaces},
   journal       = {Proc. Amer. Math. Soc.},
   fjournal      = {Proceedings of the American Mathematical Society},
@@ -13367,20 +13381,6 @@
   mrreviewer    = {Zvi\ Altshuler},
   doi           = {10.2307/2043243},
   url           = {https://doi.org/10.2307/2043243}
-}
-@article{bourgain:80:on*1,
-  author        = {Bourgain, J.},
-  title         = {On lacunary sets},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {32},
-  year          = {1980},
-  number        = {1},
-  pages         = {29--32},
-  issn          = {0037-9476},
-  mrclass       = {05A99},
-  mrnumber      = {682989},
-  mrreviewer    = {J.\ Spencer}
 }
 @article{bourgain:80:on*2,
   author        = {Bourgain, J.},
@@ -14060,22 +14060,6 @@
 }
 @article{bourgain:84:on,
   author        = {Bourgain, J.},
-  title         = {On bases in the disc algebra},
-  journal       = {Trans. Amer. Math. Soc.},
-  fjournal      = {Transactions of the American Mathematical Society},
-  volume        = {285},
-  year          = {1984},
-  number        = {1},
-  pages         = {133--139},
-  issn          = {0002-9947,1088-6850},
-  mrclass       = {46J15 (46B15 46E15)},
-  mrnumber      = {748834},
-  mrreviewer    = {Jacques\ Mayer},
-  doi           = {10.2307/1999476},
-  url           = {https://doi.org/10.2307/1999476}
-}
-@article{bourgain:84:on*1,
-  author        = {Bourgain, J.},
   title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
   journal       = {Math. Nachr.},
   fjournal      = {Mathematische Nachrichten},
@@ -14089,7 +14073,7 @@
   doi           = {10.1002/mana.19841190104},
   url           = {https://doi.org/10.1002/mana.19841190104}
 }
-@inproceedings{bourgain:84:on*2,
+@inproceedings{bourgain:84:on*1,
   author        = {Bourgain, J.},
   title         = {On nonisomorphisms of algebras of analytic functions},
   booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
@@ -14100,6 +14084,22 @@
   year          = {1984},
   mrclass       = {46J15 (32E25)},
   mrnumber      = {763536}
+}
+@article{bourgain:84:on*2,
+  author        = {Bourgain, J.},
+  title         = {On bases in the disc algebra},
+  journal       = {Trans. Amer. Math. Soc.},
+  fjournal      = {Transactions of the American Mathematical Society},
+  volume        = {285},
+  year          = {1984},
+  number        = {1},
+  pages         = {133--139},
+  issn          = {0002-9947,1088-6850},
+  mrclass       = {46J15 (46B15 46E15)},
+  mrnumber      = {748834},
+  mrreviewer    = {Jacques\ Mayer},
+  doi           = {10.2307/1999476},
+  url           = {https://doi.org/10.2307/1999476}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14214,6 +14214,20 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
+  author        = {Bourgain, J.},
+  title         = {On square functions on the trigonometric system},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {37},
+  year          = {1985},
+  number        = {1},
+  pages         = {20--26},
+  issn          = {0037-9476},
+  mrclass       = {42A50 (42A45)},
+  mrnumber      = {847119},
+  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
+}
+@article{bourgain:85:on*2,
   author        = {Bourgain, Jean},
   title         = {On finitely generated closed ideals in {$H^infty(D)$}},
   journal       = {Ann. Inst. Fourier (Grenoble)},
@@ -14227,20 +14241,6 @@
   mrnumber      = {812323},
   mrreviewer    = {Richard\ Rochberg},
   url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
-}
-@article{bourgain:85:on*2,
-  author        = {Bourgain, J.},
-  title         = {On square functions on the trigonometric system},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {37},
-  year          = {1985},
-  number        = {1},
-  pages         = {20--26},
-  issn          = {0037-9476},
-  mrclass       = {42A50 (42A45)},
-  mrnumber      = {847119},
-  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
 @article{bourgain:85:on*3,
   author        = {Bourgain, J.},
@@ -14724,22 +14724,6 @@
 }
 @article{bourgain:88:on*1,
   author        = {Bourgain, J.},
-  title         = {On the maximal ergodic theorem for certain subsets of the integers},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {39--72},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937581},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776301},
-  url           = {https://doi.org/10.1007/BF02776301}
-}
-@article{bourgain:88:on*2,
-  author        = {Bourgain, J.},
   title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14753,6 +14737,22 @@
   mrreviewer    = {Alberto\ de la Torre},
   doi           = {10.1007/BF02776302},
   url           = {https://doi.org/10.1007/BF02776302}
+}
+@article{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the maximal ergodic theorem for certain subsets of the integers},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {39--72},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937581},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776301},
+  url           = {https://doi.org/10.1007/BF02776301}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -25544,21 +25544,6 @@
 }
 @article{david.duplantier.ea:93:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
-  title         = {Renormalization theory for interacting crumpled manifolds},
-  journal       = {Nuclear Phys. B},
-  fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
-  volume        = {394},
-  year          = {1993},
-  number        = {3},
-  pages         = {555--664},
-  issn          = {0550-3213},
-  mrclass       = {82B28 (81T17 81T30 82D60)},
-  mrnumber      = {1215176},
-  doi           = {10.1016/0550-3213(93)90226-F},
-  url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-@article{david.duplantier.ea:93:renormalization*1,
-  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
   title         = {Renormalization of crumpled manifolds},
   journal       = {Phys. Rev. Lett.},
   fjournal      = {Physical Review Letters},
@@ -25571,6 +25556,21 @@
   mrnumber      = {1214561},
   doi           = {10.1103/PhysRevLett.70.2205},
   url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+@article{david.duplantier.ea:93:renormalization*1,
+  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
+  title         = {Renormalization theory for interacting crumpled manifolds},
+  journal       = {Nuclear Phys. B},
+  fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
+  volume        = {394},
+  year          = {1993},
+  number        = {3},
+  pages         = {555--664},
+  issn          = {0550-3213},
+  mrclass       = {82B28 (81T17 81T30 82D60)},
+  mrnumber      = {1215176},
+  doi           = {10.1016/0550-3213(93)90226-F},
+  url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
 }
 @article{david.duplantier.ea:94:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
@@ -25734,21 +25734,6 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25762,6 +25747,21 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -31281,6 +31281,12 @@
   mrreviewer    = {Jean-Pierre Fouque},
   doi           = {10.1016/S0304-4149(96)00098-1},
   url           = {https://doi.org/10.1016/S0304-4149(96)00098-1}
+}
+@book{flory:53:principles,
+  title         = {Principles of polymer chemistry},
+  author        = {Flory, Paul J},
+  year          = {1953},
+  publisher     = {Cornell university press}
 }
 @book{fokas.its.ea:06:painleve,
   author        = {Fokas, Athanassios S. and Its, Alexander R. and Kapaev, Andrei A. and Novokshenov, Victor Yu.},
@@ -36877,23 +36883,7 @@
   mrnumber      = {1294070},
   url           = {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
-@article{hara.slade:00:scaling,
-  author        = {Hara, Takashi and Slade, Gordon},
-  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
-  journal       = {J. Statist. Phys.},
-  fjournal      = {Journal of Statistical Physics},
-  volume        = {99},
-  year          = {2000},
-  number        = {5-6},
-  pages         = {1075--1168},
-  issn          = {0022-4715},
-  mrclass       = {82B43 (60K35)},
-  mrnumber      = {1773141},
-  mrreviewer    = {Remco van der Hofstad},
-  doi           = {10.1023/A:1018628503898},
-  url           = {https://doi.org/10.1023/A:1018628503898}
-}
-@incollection{hara.slade:00:scaling*1,
+@incollection{hara.slade:00:scaling,
   author        = {Hara, Takashi and Slade, Gordon},
   title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {II}. {I}ntegrated super-{B}rownian excursion},
   note          = {Probabilistic techniques in equilibrium and nonequilibrium statistical physics},
@@ -36909,6 +36899,22 @@
   mrreviewer    = {Remco van der Hofstad},
   doi           = {10.1063/1.533186},
   url           = {https://doi.org/10.1063/1.533186}
+}
+@article{hara.slade:00:scaling*1,
+  author        = {Hara, Takashi and Slade, Gordon},
+  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {99},
+  year          = {2000},
+  number        = {5-6},
+  pages         = {1075--1168},
+  issn          = {0022-4715},
+  mrclass       = {82B43 (60K35)},
+  mrnumber      = {1773141},
+  mrreviewer    = {Remco van der Hofstad},
+  doi           = {10.1023/A:1018628503898},
+  url           = {https://doi.org/10.1023/A:1018628503898}
 }
 @article{hara.slade:91:critical,
   author        = {Hara, Takashi and Slade, Gordon},
@@ -40319,22 +40325,6 @@
 }
 @article{huang.le.ea:17:large,
   author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title         = {Large time asymptotics for the parabolic {A}nderson model driven by space and time correlated noise},
-  journal       = {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal      = {Stochastic Partial Differential Equations. Analysis and Computations},
-  volume        = {5},
-  year          = {2017},
-  number        = {4},
-  pages         = {614--651},
-  issn          = {2194-0401},
-  mrclass       = {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber      = {3736656},
-  mrreviewer    = {Xia Chen},
-  doi           = {10.1007/s40072-017-0099-0},
-  url           = {https://doi.org/10.1007/s40072-017-0099-0}
-}
-@article{huang.le.ea:17:large*1,
-  author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title         = {Large time asymptotics for the parabolic {A}nderson model driven by spatially correlated noise},
   journal       = {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal      = {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s et Statistiques},
@@ -40348,6 +40338,22 @@
   mrreviewer    = {Xia Chen},
   doi           = {10.1214/16-AIHP756},
   url           = {https://doi.org/10.1214/16-AIHP756}
+}
+@article{huang.le.ea:17:large*1,
+  author        = {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title         = {Large time asymptotics for the parabolic {A}nderson model driven by space and time correlated noise},
+  journal       = {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal      = {Stochastic Partial Differential Equations. Analysis and Computations},
+  volume        = {5},
+  year          = {2017},
+  number        = {4},
+  pages         = {614--651},
+  issn          = {2194-0401},
+  mrclass       = {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber      = {3736656},
+  mrreviewer    = {Xia Chen},
+  doi           = {10.1007/s40072-017-0099-0},
+  url           = {https://doi.org/10.1007/s40072-017-0099-0}
 }
 @article{huang.le:19:spatial,
   author        = {Huang, Jingyu and L\^{e}, Khoa},
@@ -53796,19 +53802,6 @@
 }
 @article{nualart.sanz:85:malliavin,
   author        = {Nualart, D. and Sanz, M.},
-  title         = {Malliavin calculus for two-parameter processes},
-  journal       = {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal      = {Annales Scientifiques de l'Universit\'{e} de Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number        = {3},
-  year          = {1985},
-  pages         = {73--86},
-  issn          = {0246-1501},
-  mrclass       = {60H15 (60G60 60H07)},
-  mrnumber      = {790724},
-  mrreviewer    = {M. Zakai}
-}
-@article{nualart.sanz:85:malliavin*1,
-  author        = {Nualart, D. and Sanz, M.},
   title         = {Malliavin calculus for two-parameter {W}iener functionals},
   journal       = {Z. Wahrsch. Verw. Gebiete},
   fjournal      = {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und Verwandte Gebiete},
@@ -53822,6 +53815,19 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1007/BF00531868},
   url           = {https://doi.org/10.1007/BF00531868}
+}
+@article{nualart.sanz:85:malliavin*1,
+  author        = {Nualart, D. and Sanz, M.},
+  title         = {Malliavin calculus for two-parameter processes},
+  journal       = {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal      = {Annales Scientifiques de l'Universit\'{e} de Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number        = {3},
+  year          = {1985},
+  pages         = {73--86},
+  issn          = {0246-1501},
+  mrclass       = {60H15 (60G60 60H07)},
+  mrnumber      = {790724},
+  mrreviewer    = {M. Zakai}
 }
 @article{nualart.sanz:89:stochastic,
   author        = {Nualart, D. and Sanz, M.},
@@ -61015,22 +61021,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {96},
-  year          = {1993},
-  number        = {2},
-  pages         = {241--260},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1227034},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01192135},
-  url           = {https://doi.org/10.1007/BF01192135}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -61044,6 +61034,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01199314},
   url           = {https://doi.org/10.1007/BF01199314}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {96},
+  year          = {1993},
+  number        = {2},
+  pages         = {241--260},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1227034},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01192135},
+  url           = {https://doi.org/10.1007/BF01192135}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -62962,21 +62968,6 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62990,6 +62981,21 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -63009,6 +63015,20 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -63022,20 +63042,6 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -65620,6 +65626,13 @@
   mrnumber      = {4291588},
   doi           = {10.1090/proc/15499},
   url           = {https://doi.org/10.1090/proc/15499}
+}
+@book{volkenshtein:63:configurational,
+  title         = {Configurational statistics of polymeric chains},
+  author        = {Volkenshtein, Mikhail Vladimirovich},
+  volume        = {17},
+  year          = {1963},
+  publisher     = {Interscience Publishers}
 }
 @incollection{volkmer:10:lame,
   author        = {Volkmer, H.},
