Add some physics papers on surface growth

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 83c2cd90c2958f5a34fa59fd7d70451070ccdb97
+% Commit: d4a4ba69088a58363e672146e02de39708440c18
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2023-11-30
@@ -30232,12 +30232,23 @@
   year          = {1984},
   publisher     = {North-Holland}
 }
+@article{family.vicsek:85:scaling,
+  doi           = {10.1088/0305-4470/18/2/005},
+  url           = {https://dx.doi.org/10.1088/0305-4470/18/2/005},
+  year          = {1985},
+  month         = {feb},
+  volume        = {18},
+  number        = {2},
+  pages         = {L75},
+  author        = {Family, Fereydoon and Vicsek, Tam{\'a}s},
+  title         = {Scaling of the active zone in the Eden process on percolation networks and the ballistic deposition model},
+  journal       = {Journal of Physics A: Mathematical and General}
+}
 @article{family:86:scaling,
   doi           = {10.1088/0305-4470/19/8/006},
   url           = {https://dx.doi.org/10.1088/0305-4470/19/8/006},
   year          = {1986},
   month         = {June},
-  publisher     = {},
   volume        = {19},
   number        = {8},
   pages         = {L441},
@@ -41393,6 +41404,18 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1080/17442508808833538},
   url           = {https://doi.org/10.1080/17442508808833538}
+}
+@article{jullien.botet:85:scaling,
+  doi           = {10.1088/0305-4470/18/12/026},
+  url           = {https://dx.doi.org/10.1088/0305-4470/18/12/026},
+  year          = {1985},
+  month         = {aug},
+  volume        = {18},
+  number        = {12},
+  pages         = {2279},
+  author        = {R Jullien and R Botet},
+  title         = {Scaling properties of the surface of the Eden model in d=2, 3, 4},
+  journal       = {Journal of Physics A: Mathematical and General}
 }
 @article{kac:13:on,
   author        = {Kac, Mark},
@@ -57384,6 +57407,20 @@
   mrreviewer    = {Aernout C. D. van Enter},
   doi           = {10.1007/BF02765537},
   url           = {https://doi.org/10.1007/BF02765537}
+}
+@article{plischke.racz:85:dynamic,
+  title         = {Dynamic scaling and the surface structure of Eden clusters},
+  author        = {Plischke, Michael and R\'acz, Zolt\'an},
+  journal       = {Phys. Rev. A},
+  volume        = {32},
+  issue         = {6},
+  pages         = {3825--3828},
+  numpages      = {0},
+  year          = {1985},
+  month         = {Dec},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevA.32.3825},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevA.32.3825}
 }
 @book{podlubny:99:fractional,
   author        = {Podlubny, Igor},
