Add one more paper on Eden model by Meakin, Jullen adn Botet, 1986

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: d4a4ba69088a58363e672146e02de39708440c18
+% Commit: a3550f851128ddb6824ff2726024e60243ebacd4
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2023-11-30
@@ -48610,6 +48610,19 @@
   mrreviewer    = {Nariyuki Minami},
   doi           = {10.1007/BF02188225},
   url           = {https://doi.org/10.1007/BF02188225}
+}
+@article{meakin.jullien.ea:86:large-scale,
+  doi           = {10.1209/0295-5075/1/12/001},
+  url           = {https://dx.doi.org/10.1209/0295-5075/1/12/001},
+  year          = {1986},
+  month         = {jun},
+  publisher     = {},
+  volume        = {1},
+  number        = {12},
+  pages         = {609},
+  author        = {P. Meakin and R. Jullien and R. Botet},
+  title         = {Large-Scale Numerical Investigation of the Surface of Eden Clusters},
+  journal       = {Europhysics Letters}
 }
 @article{meakin.jullien:89:spatially,
   author        = {P. Meakin and R. Jullien},
