Add one more paper on Eden model by Zabolitzky and Stauffer 1986

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: a3550f851128ddb6824ff2726024e60243ebacd4
+% Commit: 043b746e7dbdc3d5f1c014604ffd8169e340c881
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2023-11-30
@@ -67830,6 +67830,20 @@
   mrreviewer    = {Andrzej Swiech},
   doi           = {10.1007/BFb0092419},
   url           = {https://doi.org/10.1007/BFb0092419}
+}
+@article{zabolitzky.stauffer:86:simulation,
+  title         = {Simulation of large Eden clusters},
+  author        = {Zabolitzky, J. G. and Stauffer, D.},
+  journal       = {Phys. Rev. A},
+  volume        = {34},
+  issue         = {2},
+  pages         = {1523--1530},
+  numpages      = {0},
+  year          = {1986},
+  month         = {Aug},
+  publisher     = {American Physical Society},
+  doi           = {10.1103/PhysRevA.34.1523},
+  url           = {https://link.aps.org/doi/10.1103/PhysRevA.34.1523}
 }
 @incollection{zabrodin:11:random,
   author        = {Zabrodin, A.},
